--- a/app/views/rooms/_rooms.html.erb
+++ b/app/views/rooms/_rooms.html.erb
@@ -22,7 +22,7 @@
   <li class="clearfix room_li" style="color:#fff;" id="<%= dom_id(room) %>">
 
     <!-- <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_01.jpg" alt="avatar" /> -->
-    <%= image_tag "avatar", width: "55px" %>
+    <%= image_tag "avatar.png", width: "55px" %>
     <div class="about">
       <div class="name">
         <%= room.name %>
