--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,6 @@
 body {
-  background-color: #fff;
+  background-color: rgba(100, 100, 100, 0);
+  // background-color: #fff;
   color: #333;
   margin: 0px; 
 }
