--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,20 +1,14 @@
 <%= turbo_frame_tag "new_message", target: "_top" do %>
   <%= form_with(model: [ @message.room, @message ],
         data: { controller: "reset_form", action: "turbo:submit-end->reset_form#reset" }) do |form| %>
-<% if false %>
-    <div class="field">
-      <%= form.text_field :content %>
-      <%= form.select :participant_id, options_from_collection_for_select(User.all, "id", "name") %>
-      <%= form.submit "Send" %>
-    </div>
-<% end %>
     <div class="chat-message clearfix">
       <!-- <textarea name="message-to-send" id="message-to-send" placeholder ="Type your message" rows="3"></textarea> -->
       <%= form.text_area :content, placeholder:"Type your message", rows:"2" %>
       <i class="fa fa-file-o"></i> &nbsp;&nbsp;&nbsp;
       <i class="fa fa-file-image-o"></i>
 
-      <%= form.select :participant_id, options_from_collection_for_select(User.all, "id", "name") %>
+      <%# form.select :participant_id, options_from_collection_for_select(User.all, "id", "email"), {}, {class: "message_participant_id"} %>
+      <%= form.hidden_field :participant_id, value: current_user.id %>
       <button><%= form.submit "Send", id:"submit" %></button>
       <!-- <button>Send</button> -->
 
